Thu May  3 05:36:06 2001  Owen Taylor  <otaylor@redhat.com>

        * pixbuf.h: Fix trailing comma on enumeration. (#54071)

2001-03-05  Michael Natterer  <mitch@gimp.org>

	* src/pixbuf-draw.c: made the "parent_class" pointer static.

	(Owen, I just commented out the draw methods which don't exist any
	more to make it compile).

2001-02-20  Sven Neumann  <sven@convergence.de>

	* src/pixbuf-draw.c (draw_vline): use draw_vline method of 
	parent_class, not draw_hline

Wed Nov 15 21:56:28 2000  Owen Taylor  <otaylor@redhat.com>

	* src/pixbuf-*: A few updates for GTypePlugin.

Tue Jul 18 12:13:19 2000  Owen Taylor  <otaylor@redhat.com>

        Updates to work with GTK+-2.0 theme engine architecture.
	It won't even sort of work with GTK+-1.2 any more.

	* configure.in src/Makefile.am: Look for GTK+-2.0, 
	install engine into GTK+-2.0 location.
	
	* src/pixbuf-style.h src/pixbuf-rc-style.[ch]: New
	files for GtkRcStyle and GtkStyle subclasses. Parsing,
	etc, moves to pixbuf-rc-style.[ch]

	* src/pixbuf-draw.c: Chain up to parent implementation
	when images aren't found for a certain element.

Sun Jul  9 18:15:58 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in (ACLOCAL): Add -Wall for gcc.

	* src/pixbuf-render.c (pixbuf_render): Fix problem
	using gdk_rectangle_intersect() from GTK+-1.2.

	* src/pixbuf-render.c src/pixbuf-draw.c: Remove 
	direct access to pixbuf internals.

Mon Mar  6 11:44:58 2000  Owen Taylor  <otaylor@redhat.com>

        * docs/gap-geometry.fig: Moved into docs/ subdir
	
        * Makefile.am configure.in autogen.sh src/Makefile.am: 
	automakify
	 
	* src/pixbuf.h src/pixbuf-render.c src/pixbuf-draw.c
	src/pixbuf-main.c: Move sources into subdir and
	rename.

Mon Mar  6 11:02:07 2000  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_pixbuf.c: Handle drawing transparency without a
	mask correctly.

	* pixmap_theme_main.c pixmap_theme_draw.c: Remove duplicate
	includes.
	
Sun Feb  6 21:34:30 2000  Owen Taylor  <otaylor@redhat.com>
